@@ -58,53 +58,18 @@ cdl_package CYGPKG_DEVS_FLASH_ARM_XSCALE_IQ80310 {
     requires	  CYGPKG_HAL_ARM_XSCALE_IOP310
 
     implements    CYGHWR_IO_FLASH_DEVICE
-    implements    CYGHWR_IO_FLASH_DEVICE_NOT_IN_RAM
     implements    CYGHWR_IO_FLASH_BLOCK_LOCKING
 
     include_dir   .
     include_files ; # none _exported_ whatsoever
     description   "FLASH memory device support for Cyclone IQ80310"
-    compile       iq80310_flash.c
-
-    make -priority 1 {
-        flash_erase_block.o: $(REPOSITORY)/$(PACKAGE)/src/flash_erase_block.c
-        $(CC) -S $(INCLUDE_PATH) $(CFLAGS) -g0 -fno-function-sections $(REPOSITORY)/$(PACKAGE)/src/flash_erase_block.c
-        echo " .globl flash_erase_block_end" >>flash_erase_block.s
-        echo "flash_erase_block_end:" >>flash_erase_block.s
-        $(CC) $(CFLAGS) -c -o flash_erase_block.o flash_erase_block.s
-        $(AR) rcs $(PREFIX)/lib/libtarget.a flash_erase_block.o
-    }
-    make -priority 1 {
-        flash_program_buf.o: $(REPOSITORY)/$(PACKAGE)/src/flash_program_buf.c
-        $(CC) -S $(INCLUDE_PATH) $(CFLAGS) -g0 -fno-function-sections $(REPOSITORY)/$(PACKAGE)/src/flash_program_buf.c
-        echo " .globl flash_program_buf_end" >>flash_program_buf.s
-        echo "flash_program_buf_end:" >>flash_program_buf.s
-        $(CC) $(CFLAGS) -c -o flash_program_buf.o flash_program_buf.s
-        $(AR) rcs $(PREFIX)/lib/libtarget.a flash_program_buf.o
-    }
-    make -priority 1 {
-        flash_query.o: $(REPOSITORY)/$(PACKAGE)/src/flash_query.c
-        $(CC) -S $(INCLUDE_PATH) $(CFLAGS) -g0 -fno-function-sections $(REPOSITORY)/$(PACKAGE)/src/flash_query.c
-        echo " .globl flash_query_end" >>flash_query.s
-        echo "flash_query_end:" >>flash_query.s
-        $(CC) $(CFLAGS) -c -o flash_query.o flash_query.s
-        $(AR) rcs $(PREFIX)/lib/libtarget.a flash_query.o
-    }
-    make -priority 1 {
-        flash_lock_block.o: $(REPOSITORY)/$(PACKAGE)/src/flash_lock_block.c
-        $(CC) -S $(INCLUDE_PATH) $(CFLAGS) -g0 -fno-function-sections $(REPOSITORY)/$(PACKAGE)/src/flash_lock_block.c
-        echo " .globl flash_lock_block_end" >>flash_lock_block.s
-        echo "flash_lock_block_end:" >>flash_lock_block.s
-        $(CC) $(CFLAGS) -c -o flash_lock_block.o flash_lock_block.s
-        $(AR) rcs $(PREFIX)/lib/libtarget.a flash_lock_block.o
-    }
-    make -priority 1 {
-        flash_unlock_block.o: $(REPOSITORY)/$(PACKAGE)/src/flash_unlock_block.c
-        $(CC) -S $(INCLUDE_PATH) $(CFLAGS) -g0 -fno-function-sections $(REPOSITORY)/$(PACKAGE)/src/flash_unlock_block.c
-        echo " .globl flash_unlock_block_end" >>flash_unlock_block.s
-        echo "flash_unlock_block_end:" >>flash_unlock_block.s
-        $(CC) $(CFLAGS) -c -o flash_unlock_block.o flash_unlock_block.s
-        $(AR) rcs $(PREFIX)/lib/libtarget.a flash_unlock_block.o
+    compile       iq80310_flash.c flash_erase_block.c flash_program_buf.c flash_query.c
+    
+    cdl_component  CYGPKG_DEVS_FLASH_IQ80310_LOCKING {
+	display "Flash device implements locking"
+	active_if 0 < CYGHWR_IO_FLASH_BLOCK_LOCKING
+	calculated 1
+	compile flash_lock_block.c flash_unlock_block.c
     }
 }
 
