@@ -53,11 +53,10 @@
 #include "flash.h"
 
 
-//
-// CAUTION!  This code must be copied to RAM before execution.  Therefore,
-// it must not contain any code which might be position dependent!
-//
 
+int
+flash_lock_block(volatile unsigned char *block)
+	__attribute__ ((section (".2ram.flash_lock_block")));
 int
 flash_lock_block(volatile unsigned char *block)
 {
