@@ -1,3 +1,13 @@
+2003-09-16  Jani Monoses <jani@iv.ro>
+
+	* src/flash_lock_block.c (flash_lock_block): 
+	* src/flash_unlock_block.c (flash_unlock_block): 
+	* src/flash_erase_block.c (flash_erase_block): 
+	* src/flash_query.c (flash_query): 
+	* src/flash_program_buf.c (flash_program_buf): Put flash functions
+	in RAM using section attributes instead of the old method.
+	* src/iq80310_flash.c (flash_hwr_init): Use generic flash_query_dev. 
+	
 2003-04-04  Jani Monoses <jani@iv.ro>
 
 	* src/flash_lock_block.c (flash_lock_block): 
